Un double clic envoie sur la table du noeud et ne zoom plus

--- a/auth-jwt/src/connexion.html
+++ b/auth-jwt/src/connexion.html
@@ -2,10 +2,10 @@
 <html>
     <head>
     	<meta charset="utf-8" />
-        <title>Connexion au chat</title>
+        <title>Connexion à l'application</title>
     </head>
     <body>
-    	<h1>Connexion - socket.io</h1>
+    	<h1>Connexion - Authentification</h1>
     	<form method="POST" action="/access">
 			<br/>
 			Login :<br/>
